--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Web Mining and Applied NLP (44-620)\n",
+    "## Matplotlib and Pyplot\n",
     "\n",
-    "## Matplotlib and pyplot\n",
-    "\n",
-    "### Student Name: **Elen Tesfai**\n",
+    "**Student Name**: Elen Tesfai  \n",
+    "**GitHub Repo**: [my-matplotlib-project](https://github.com/Elen-tesfai/my-matplotlib-project)\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -320,18 +320,11 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
